--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "angular-froala-wysiwyg": "^3.0.6",
     "bootstrap": "^4.4.1",
+    "froala-editor": "^3.0.6",
     "funding": "^1.0.9",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
