--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^8.2.14",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
     "@angular/core": "~8.2.14",
@@ -24,6 +25,8 @@
     "bootstrap": "^4.4.1",
     "froala-editor": "^3.0.6",
     "funding": "^1.0.9",
+    "hammerjs": "^2.0.8",
+    "json-server": "^0.15.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
